--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
 			
 			<div class="col-right">
 				<h1>Linh Hickey</h1>
-				<h2>Data Analyst and Finance Enthusiast</h2>
-				<p>Add your profile summary here. You can have several paragraphs or add links.</p>
+<!--				<h2>Data Analyst and Finance Enthusiast</h2>-->
+<!--				<p>Add your profile summary here. You can have several paragraphs or add links.</p>-->
 			</div>
 		</div>
     </header>
 
     <main>
         <!-- // Work Experience -->
+<!--
         <section class="work">
 
 			<h2 class="section-header">Work Experience</h2>
@@ -55,7 +56,7 @@
 					
 				<div class="col-left">
 					<h3>Database Intern</h3>
-					<p>Merhcants Bank NA</p>
+					<p>Merchants Bank NA</p>
 					<p>May 2018 - August 2018</p>
 				</div>
 
@@ -148,7 +149,7 @@
         </section>
 
 
-        <!-- // Education -->
+         // Education 
         <section class="education">
 			
 			<h2 class="section-header">Education</h2>
@@ -177,13 +178,16 @@
 			</div>
 			</div>
 		</section>
+-->
+		
+<!--		In progress!-->
     </main>
 
     <!-- // Footer & contact info -->
     <footer>
 		<div class="container">
 			<div class="col-full">
-				<h2>Let's Keep in Touch!</h2>
+				<h2> In progress! </h2>
 					<div class="contact-info">
 						<a href="mailto:linhhickey@gmail.com">linhhickey[at]gmail[dot]com</a>
 						<a href="http://linhhickey.com" target="_blank">linhhickey.com</a>
